--- a/stable_diffusion.ipynb
+++ b/stable_diffusion.ipynb
@@ -51,7 +51,7 @@
         "from diffusers import DiffusionPipeline\n",
         "\n",
         "pipe = DiffusionPipeline.from_pretrained(\n",
-        "    \"stabilityai/stable-diffusion-xl-base-1.0\",\n",
+        "    \"SG161222/Realistic_Vision_V5.1_noVAE\",\n",
         "    torch_dtype=torch.float16,\n",
         "    use_safetensors=True,\n",
         "    variant=\"fp16\",\n",
@@ -85,7 +85,7 @@
         "prompt = \"a photo of Pikachu fine dining with a view to the Eiffel Tower\"\n",
         "seed = random.randint(0, sys.maxsize)\n",
         "\n",
-        "negative_prompt = \"3d, cartoon, anime, (deformed eyes, nose, ears, nose), bad anatomy, ugly\"\n",
+        "negative_prompt = \"(deformed iris, deformed pupils, semi-realistic, cgi, 3d, render, sketch, cartoon, drawing, anime:1.4), text, close up, cropped, out of frame, worst quality, low quality, jpeg artifacts, ugly, duplicate, morbid, mutilated, extra fingers, mutated hands, poorly drawn hands, poorly drawn face, mutation, deformed, blurry, dehydrated, bad anatomy, bad proportions, extra limbs, cloned face, disfigured, gross proportions, malformed limbs, missing arms, missing legs, extra arms, extra legs, fused fingers, too many fingers, long neck\"\n",
         "\n",
         "images = pipe(\n",
         "    prompt = prompt,\n",
