--- a/stable_diffusion.ipynb
+++ b/stable_diffusion.ipynb
@@ -63,8 +63,7 @@
         "      text_encoder_2=pipe.text_encoder_2,\n",
         "      vae=pipe.vae,\n",
         "      torch_dtype=torch.float16,\n",
-        "      use_safetensors=True,\n",
-        "      variant=\"fp16\",\n",
+        "      use_safetensors=True,\n"  
         "  )\n",
         "\n",
         "  refiner = refiner.to(\"cuda\")\n",
