--- a/stable_diffusion.ipynb
+++ b/stable_diffusion.ipynb
@@ -1,47 +1,34 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "stable-diffusion.ipynb",
-      "private_outputs": true,
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU",
-    "gpuClass": "standard"
-  },
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "%pip install --quiet --upgrade diffusers transformers accelerate invisible_watermark mediapy"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "ufD_d64nr08H"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "%pip install --quiet --upgrade diffusers transformers accelerate invisible_watermark mediapy"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "use_refiner = False"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "hRVsA7iYxpMj"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "use_refiner = False"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "bG2hkmSEvByV"
+      },
+      "outputs": [],
       "source": [
         "import mediapy as media\n",
         "import random\n",
@@ -63,7 +50,7 @@
         "      text_encoder_2=pipe.text_encoder_2,\n",
         "      vae=pipe.vae,\n",
         "      torch_dtype=torch.float16,\n",
-        "      use_safetensors=True,\n"  
+        "      use_safetensors=True,\n",
         "  )\n",
         "\n",
         "  refiner = refiner.to(\"cuda\")\n",
@@ -71,15 +58,15 @@
         "  pipe.enable_model_cpu_offload()\n",
         "else:\n",
         "  pipe = pipe.to(\"cuda\")"
-      ],
-      "metadata": {
-        "id": "bG2hkmSEvByV"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "AUc4QJfE-uR9"
+      },
+      "outputs": [],
       "source": [
         "prompt = \"a photo of Pikachu fine dining with a view to the Eiffel Tower\"\n",
         "seed = random.randint(0, sys.maxsize)\n",
@@ -103,12 +90,25 @@
         "print(f\"Prompt:\\t{prompt}\\nSeed:\\t{seed}\")\n",
         "media.show_images(images)\n",
         "images[0].save(\"output.jpg\")"
-      ],
-      "metadata": {
-        "id": "AUc4QJfE-uR9"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "name": "stable-diffusion.ipynb",
+      "private_outputs": true,
+      "provenance": []
+    },
+    "gpuClass": "standard",
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
